Fixing overflow

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Arvo';
     font-weight: bold;
+    overflow-x: hidden;
 }
 /* Navbar Styles */
 .navbar-blue {
